# bezier_opengl

./: .gitignore  CMakeLists.txt  cfg.py  config_example.json
.github/workflows/: cmake-multi-build.yml  create-deb-installer.yml  create-win-installer.yml
cmake/: ProjectInstaller.cmake
include/: AppConfiguration.h  Color.h  MathExt.h  Point.h  Shader.h  Size.h
libs/: ProjectLibs.cmake
shaders/: curve.vert  rect.frag  rect.vert
src/: AppConfiguration.cpp  Color.cpp  MathExt.cpp  Point.cpp  Shader.cpp  Size.cpp  main.cpp
